fix(reports): reset button, chart tooltip, last column header text-align

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1031,7 +1031,3 @@ span.token.active-word {
   border-color: #fff;
   border-radius: 4px;
 }
-
-.ant-tooltip {
-  display: none;
-}
